# vulkan-game-editor

./: .clang-format  .clangd  .gitignore  .prettydiffrc  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CMakeSettings.json  ENCOUNTERED_ISSUES.md  INFO.md  README.md  TODO.md  TROUBLESHOOTING.md  Taskfile.yml  WORKING_PROTOBUF_VERSION.MD  analyze_moc_include  camera.cpp  camera.h  const.h  debug.h  item.cpp  item.h  item_attribute.cpp  item_attribute.h  item_type.cpp  item_type.h  items.cpp  items.h  logger.cpp  logger.h  main.cpp  main.h  main.qml  map.cpp  map.h  map_io.cpp  map_renderer.cpp  map_renderer.h  map_view.cpp  map_view.h  otb.cpp  (+32 more)
action/: action.cpp  action.h
cmake/: CompileShaders.cmake
data/: item_names_12.8.txt
ecs/: ecs.h  item_animation.cpp  item_animation.h
graphics/: appearances.cpp  appearances.h  batch_item_draw.cpp  batch_item_draw.h  buffer.cpp  buffer.h  compression.cpp  compression.h  device_manager.cpp  device_manager.h  engine.cpp  engine.h  resource-descriptor.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  texture_atlas.cpp  texture_atlas.h  vertex.h  vulkan_helpers.cpp  vulkan_helpers.h
gui/: border_layout.cpp  border_layout.h  borderless_window.h  item_list.cpp  item_list.h  mainwindow.cpp  mainwindow.h  map_view_widget.cpp  map_view_widget.h  menu.h  qt_util.cpp  qt_util.h  renderer.cpp  renderer.h  vulkan_window.cpp  vulkan_window.h
lzma/: LzmaEnc.h
qt/: logging.cpp  logging.h
shaders/: compile.bat  frag.spv  shader.frag  shader.vert  sprite-atlas.frag  sprite-atlas.vert  vert.spv
src/: camera.cpp  camera.h  concepts.h  config.cpp  config.h  const.h  creature.cpp  creature.h  debug.h  definitions.h  editor_action.cpp  editor_action.h  file.cpp  file.h  (+82 more)
src/common/: CMakeLists.txt
src/common/cmake/: common-config.cmake.in
src/common/common/: camera.cpp  camera.h  config.h  creature.cpp  debug.h  editor_action.cpp  frame_group.cpp  item.h  item_data.cpp  item_data.h  item_location.cpp  item_type.h  item_wrapper.h  load_map.h  log.h  map_copy_buffer.cpp  map_renderer.cpp  map_renderer.h  map_view.cpp  minimap_colors.h  observable_item.cpp  otb.cpp  position.cpp  tile_cover.cpp  tile_cover.h  util.h
src/common/common/brushes/: brush.cpp  creature_brush.cpp  doodad_brush.cpp  ground_brush.cpp  mountain_brush.h  wall_brush.h
src/common/common/graphics/: compression.h  device_manager.cpp  device_manager.h  engine.h  swapchain.h  texture.cpp  texture.h  texture_atlas.cpp  texture_atlas.h  validation.h  vulkan_debug.cpp  vulkan_helpers.h  vulkan_screen_texture.cpp  vulkan_screen_texture.h
src/common/common/history/: history.cpp  history.h  history_action.h
src/common/common/lua/: lua_brush.cpp  luascript_interface.h
src/ui/: CMakeLists.txt  ui_root.qml
src/ui/cmake/: qml_ui-config.cmake.in
src/ui/src/: enum_conversion.cpp  enum_conversion.h  logging.cpp  logging.h  qml_ui_utils.cpp  qml_ui_utils.h  qt_vulkan_info.cpp  qt_vulkan_info.h
src/vme/AppComponents/: BorderedLayout.qml  CMakeLists.txt  InputField.qml  ItemPalette.qml  ItemPanel.qml  MapTabButton.qml  MapView.qml  MinimapView.qml  RedSquare.qml  ResizableItem.qml  SearchPopupFilterChoice.qml  SearchPopupView.qml  ThingList.qml  TownWindow.qml  VerticalPanelArea.qml  combobox_model.cpp  combobox_model.h  context_menu_model.cpp  context_menu_model.h  gui_thing_image.cpp  gui_thing_image.h  item_palette_model.cpp  item_palette_model.h  item_palette_store.cpp  item_palette_store.h  minimap.cpp  minimap.h  my_type.cpp  my_type.h  qml_map_item.cpp  qml_map_item.h  qml_ui_utils.cpp  qml_ui_utils.h  qt_vulkan_info.cpp  qt_vulkan_info.h  refreshable_image.cpp  refreshable_image.h  search_result_model.cpp  search_result_model.h  thing_list_model.cpp  (+6 more)
src/vme/app/: CMakeLists.txt  app_data_model.cpp  app_data_model.h  debug_util.cpp  debug_util.h  editor.cpp  editor.h  enum_conversion.cpp  enum_conversion.h  main.cpp  main.h  qml_map_item.cpp  qml_map_item.h  qml_ui_utils.cpp  qt_logging.cpp  qt_vulkan_info.cpp  qt_vulkan_info.h
src/vme/app/qml/: main.qml
src/vme/core/: CMakeLists.txt
src/vme/core/core/: camera.cpp  camera.h  const.h  debug.h  editor_action.cpp  editor_action.h  error.h  item.cpp  item_palette.cpp  item_palette.h  item_type.cpp  item_type.h  item_wrapper.cpp  items.cpp  logger.h  map.cpp  map.h  map_copy_buffer.h  map_renderer.cpp  map_renderer.h  map_view.cpp  map_view.h  octree.cpp  octree.h  outfit.h  position.h  random.h  save_map.cpp  save_map.h  settings.cpp  settings.h  signal.h  tile.cpp  tile.h  tile_cover.h  tile_location.h  tileset.cpp  tileset.h  time_util.h  type_trait.h  (+3 more)
src/vme/core/core/brushes/: border_brush.cpp  border_brush.h  border_brush_variation.cpp  border_brush_variation.h  brush.cpp  brush.h  brush_loader.cpp  brush_loader.h  brushes.cpp  brushes.h  creature_brush.cpp  creature_brush.h  doodad_brush.cpp  doodad_brush.h  ground_brush.cpp  ground_brush.h  mountain_brush.cpp  mountain_brush.h  raw_brush.cpp  raw_brush.h  wall_brush.cpp  wall_brush.h
src/vme/core/core/graphics/: appearances.cpp  appearances.h  buffer.cpp  buffer.h  resource-descriptor.cpp  swapchain.cpp  texture.cpp  texture.h  texture_atlas.h  vulkan_helpers.cpp  vulkan_helpers.h  vulkan_screen_texture.cpp  vulkan_screen_texture.h
src/vme/core/core/graphics/protobuf/: appearances.pb.cc  appearances.pb.h  map.pb.cc  map.pb.h  shared.pb.cc  shared.pb.h
src/vme/core/core/history/: history_action.h  history_change.cpp  history_change.h  thing_mutation.h
src/vme/core/core/lua/: lua_brush.cpp  lua_state.cpp  lua_state.h  luascript_interface.cpp
src/vme/core/core/render/: light_constants.h  light_occlusion.cpp  light_occlusion.h  light_pass_descriptor.cpp  light_pass_descriptor.h  light_renderer.cpp  light_renderer.h  quad_mesh.cpp  quad_mesh.h  render_coordinator.cpp  render_coordinator.h
src/vme/core/test/: CMakeLists.txt  item_test.cpp  map_view_test.cpp  observable_item_test.cpp  position_test.cpp
test/: CMakeLists.txt  item_test.cpp  main.cpp  map_view_test.cpp  observable_item_test.cpp  position_test.cpp  tracked_item_test.cpp  vulkan_window_test.cpp
(+220 files in other folders)
